--- a/src/components/FeedPreview/styles.scss
+++ b/src/components/FeedPreview/styles.scss
@@ -17,7 +17,7 @@ $color-black: #000000;
   margin: 40px 180px;
   border-radius: 20px;
   width: auto;
-  height: 300px;
+  height: 400px;
   background-color: rgba($color-grey-light, .6);
   box-shadow: 0px 0px 25px 1px rgba(50, 50, 50, 0.3);
   animation: pop-in .5s ease forwards;
@@ -35,22 +35,20 @@ $color-black: #000000;
     text-align: center;
     z-index: 2;
     border-radius: 20px 20px 0 0;
-    background-color: rgba($color-grey-dark, .3);
+    background-color: rgba($color-grey-dark, .7);
   }
 }
 
 .feeds {
-  position: absolute;
   border-radius: 10px;
-  height: -webkit-fill-available;
-  width: -webkit-fill-available;
+  height: inherit;
+  width: inherit;
   overflow-y: auto;
-  margin: 40px 30px 30px 30px;
-
-  //display: flex;
-  //flex-flow: row wrap;
-  //justify-content: space-around;
-  //align-content: stretch;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-content: stretch;
+  padding: 40px;
 
 
   &::-webkit-scrollbar {
@@ -59,8 +57,10 @@ $color-black: #000000;
 }
 
 .item {
+  position: relative;
   margin: 10px;
-  width: 300px;
+  width: 420px;
+  height: 140px;
 
   background-color: rgba($color-white, .3);
   border-radius: 10px;
@@ -68,10 +68,10 @@ $color-black: #000000;
   display: inline-block;
 
   &__title {
+    float: left;
     padding: 0 20px;
     display: inline-block;
-    vertical-align: top;
-    width: 190px;
+    width: 280px;
 
     font-weight: 200;
     font-style: normal;
@@ -79,15 +79,16 @@ $color-black: #000000;
   }
 
   &__img {
+    float: left;
     display: inline-block;
     vertical-align: middle;
-    width: 100px;
+    padding: 5px;
   }
 }
 
 .img {
-  height: 100px;
-  width: 100px;
+  height: 120px;
+  width: 120px;
   border-radius: 15px;
   object-fit: cover;
 }
@@ -97,6 +98,7 @@ $color-black: #000000;
   text-transform: uppercase;
   text-shadow: 0 0 20px rgba(0, 0, 0, .2);
   margin-top: 12px;
+  display: inline-block;
 
   font-family: "Montserrat", sans-serif;
   font-weight: 800;
@@ -106,18 +108,64 @@ $color-black: #000000;
 
 .header-secondary {
   font-family: "Montserrat", sans-serif;
-  font-weight: 500;
+  font-weight: 400;
   font-style: normal;
   font-size: 16px;
+  text-align: justify;
 
   &--title {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
   }
-  &--description {
+  &--date {
+    right: 20px;
+    float: right;
+    position: absolute;
+    bottom: 0;
+  }
+}
+
+.look-for-box {
+  position: absolute;
+  display: inline-block;
+
+  right: 50px;
+  bottom: 50%;
+  transform: translateY(50%);
+
+  &__icon {
+    height: 25px;
+    width: 25px;
+    text-align: center;
+    background-image: url(./lookup.png);
+  }
+
+  &__input {
+    color: inherit;
+    padding: 5px 15px;
+    background-color: $color-white;
+    transition: all .3s;
+    border-radius: 1.5rem;
+    border: 1.5px solid rgb(227, 227, 227);
+
+    &:focus {
+      outline: none;
+      border-bottom: 1.5px solid $color-grey-dark;
+    }
+
+    &:focus:invalid {
+      border-bottom: 1.5px solid $color-grey-dark;
+    }
+
+    &::-webkit-input-placeholder {
+      color: $color-grey-dark;
+    }
   }
 }
 
 //animations
-
 @keyframes pop-in {
   0% {
     transform:scale(0);
