--- a/src/components/FeedPreview/styles.scss
+++ b/src/components/FeedPreview/styles.scss
@@ -8,6 +8,9 @@ $color-grey-dark: #a9a9a9;
 
 $color-black: #000000;
 
+$color-error: #eb0200;
+$color-green-dark: #0F2027;
+
 *, *:before, *:after {
   box-sizing: border-box;
 }
@@ -18,7 +21,7 @@ $color-black: #000000;
   border-radius: 20px;
   width: auto;
   height: 400px;
-  background-color: rgba($color-grey-light, .6);
+  background-color: rgba($color-white, .6);
   box-shadow: 0px 0px 25px 1px rgba(50, 50, 50, 0.3);
   animation: pop-in .5s ease forwards;
 
@@ -32,10 +35,10 @@ $color-black: #000000;
     margin: 0 auto;
     left: 0;
     right: 0;
-    text-align: center;
     z-index: 2;
     border-radius: 20px 20px 0 0;
-    background-color: rgba($color-grey-dark, .7);
+    height: 40px;
+    background-color: rgba($color-white, .8);
   }
 }
 
@@ -46,10 +49,9 @@ $color-black: #000000;
   overflow-y: auto;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-content: stretch;
   padding: 40px;
-
 
   &::-webkit-scrollbar {
     display: none;
@@ -61,8 +63,9 @@ $color-black: #000000;
   margin: 10px;
   width: 420px;
   height: 140px;
+  cursor: pointer;
 
-  background-color: rgba($color-white, .3);
+  background-color: rgba($color-white, .6);
   border-radius: 10px;
   padding: 5px;
   display: inline-block;
@@ -72,10 +75,6 @@ $color-black: #000000;
     padding: 0 20px;
     display: inline-block;
     width: 280px;
-
-    font-weight: 200;
-    font-style: normal;
-    font-size: 14px;
   }
 
   &__img {
@@ -83,6 +82,12 @@ $color-black: #000000;
     display: inline-block;
     vertical-align: middle;
     padding: 5px;
+  }
+
+  &:hover {
+    background-color: rgba($color-white, .9);
+    transform: translateY(-2px);
+    box-shadow: 0 8px 15px rgba($color-green-dark, .3);
   }
 }
 
@@ -94,24 +99,29 @@ $color-black: #000000;
 }
 
 .header-primary {
-  color: $color-black;
   text-transform: uppercase;
-  text-shadow: 0 0 20px rgba(0, 0, 0, .2);
-  margin-top: 12px;
   display: inline-block;
+  padding-left: 50px;
+  text-align: center;
 
-  font-family: "Montserrat", sans-serif;
-  font-weight: 800;
+  margin:auto;
+  line-height:40px;
+  vertical-align:middle;
+
+  font-weight: 600;
   font-style: normal;
-  font-size: 14px;
+  font-size: 15px;
+
+  &--title {
+    text-decoration: none;
+    color:  $color-green-dark;
+  }
 }
 
-.header-secondary {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+.header-secondary  {
   font-size: 16px;
-  text-align: justify;
+  font-weight: 600;
+  text-align: left;
 
   &--title {
     overflow: hidden;
@@ -130,14 +140,26 @@ $color-black: #000000;
 .look-for-box {
   position: absolute;
   display: inline-block;
-
   right: 50px;
   bottom: 50%;
   transform: translateY(50%);
 
+  &__icon {
+    position: absolute;
+    display: inline-block;
+    fill: $color-grey-dark;
+    height: 18px;
+    width: 18px;
+    top: 50%;
+    right: auto;
+    left: .7em;
+    transform: translateY(-50%);
+  }
+
   &__input {
+    width: 250px;
     color: inherit;
-    padding: 5px 15px;
+    padding: 5px 38px;
     background-color: $color-white;
     transition: all .3s;
     border-radius: 1.5rem;
@@ -145,16 +167,57 @@ $color-black: #000000;
 
     &:focus {
       outline: none;
-      border-bottom: 1.5px solid $color-grey-dark;
-    }
-
-    &:focus:invalid {
-      border-bottom: 1.5px solid $color-grey-dark;
+      border: 1.5px solid $color-green-dark;
     }
 
     &::-webkit-input-placeholder {
       color: $color-grey-dark;
     }
+  }
+}
+
+.error-message {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+
+  &--title {
+    font-size: 16px;
+    color: $color-green-dark;
+    font-weight: 800;
+    margin: 5px;
+  }
+
+  &--description {
+    font-size: 13px;
+    color: $color-green-dark;
+    font-weight: 400;
+    margin: 5px;
+  }
+
+  &--button {
+    margin-top: 10px;
+    border-radius: 1.5rem;
+    border: 1.5px solid rgb(227, 227, 227);
+    padding: 5px 20px;
+
+
+    &:hover {
+    }
+
+    &:active {
+      outline: none;
+      box-shadow: 0 0 4px rgba($color-green-dark, 0.2);
+      transform: translateY(-1px);
+    }
+
+    &:focus {
+      outline: none;
+    }
+
   }
 }
 
