--- a/src/components/FeedPreview/styles.scss
+++ b/src/components/FeedPreview/styles.scss
@@ -130,109 +130,109 @@ $color-green-dark: #0F2027;
     -webkit-box-orient: vertical;
   }
   &--date {
-    right: 20px;
-    float: right;
+    font-size: 12px;
+    font-weight: 500;
     position: absolute;
-    bottom: 0;
-  }
+    bottom: 0px;
+}
 }
 
 .look-for-box {
-  position: absolute;
-  display: inline-block;
-  right: 50px;
-  bottom: 50%;
-  transform: translateY(50%);
+position: absolute;
+display: inline-block;
+right: 50px;
+bottom: 50%;
+transform: translateY(50%);
 
-  &__icon {
-    position: absolute;
-    display: inline-block;
-    fill: $color-grey-dark;
-    height: 18px;
-    width: 18px;
-    top: 50%;
-    right: auto;
-    left: .7em;
-    transform: translateY(-50%);
-  }
+&__icon {
+position: absolute;
+display: inline-block;
+fill: $color-grey-dark;
+height: 18px;
+width: 18px;
+top: 50%;
+right: auto;
+left: .7em;
+transform: translateY(-50%);
+}
 
-  &__input {
-    width: 250px;
-    color: inherit;
-    padding: 5px 38px;
-    background-color: $color-white;
-    transition: all .3s;
-    border-radius: 1.5rem;
-    border: 1.5px solid rgb(227, 227, 227);
+&__input {
+width: 250px;
+color: inherit;
+padding: 5px 38px;
+background-color: $color-white;
+transition: all .3s;
+border-radius: 1.5rem;
+border: 1.5px solid rgb(227, 227, 227);
 
-    &:focus {
-      outline: none;
-      border: 1.5px solid $color-green-dark;
-    }
+&:focus {
+  outline: none;
+  border: 1.5px solid $color-green-dark;
+}
 
-    &::-webkit-input-placeholder {
-      color: $color-grey-dark;
-    }
-  }
+&::-webkit-input-placeholder {
+  color: $color-grey-dark;
+}
+}
 }
 
 .error-message {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
+text-align: center;
+position: absolute;
+top: 50%;
+transform: translateY(-50%);
+-webkit-transform: translateY(-50%);
+-ms-transform: translateY(-50%);
 
-  &--title {
-    font-size: 16px;
-    color: $color-green-dark;
-    font-weight: 800;
-    margin: 5px;
-  }
+&--title {
+font-size: 16px;
+color: $color-green-dark;
+font-weight: 800;
+margin: 5px;
+}
 
-  &--description {
-    font-size: 13px;
-    color: $color-green-dark;
-    font-weight: 400;
-    margin: 5px;
-  }
+&--description {
+font-size: 13px;
+color: $color-green-dark;
+font-weight: 400;
+margin: 5px;
+}
 
-  &--button {
-    margin-top: 10px;
-    border-radius: 1.5rem;
-    border: 1.5px solid rgb(227, 227, 227);
-    padding: 5px 20px;
+&--button {
+margin-top: 10px;
+border-radius: 1.5rem;
+border: 1.5px solid rgb(227, 227, 227);
+padding: 5px 20px;
 
 
-    &:hover {
-    }
+&:hover {
+}
 
-    &:active {
-      outline: none;
-      box-shadow: 0 0 4px rgba($color-green-dark, 0.2);
-      transform: translateY(-1px);
-    }
+&:active {
+  outline: none;
+  box-shadow: 0 0 4px rgba($color-green-dark, 0.2);
+  transform: translateY(-1px);
+}
 
-    &:focus {
-      outline: none;
-    }
+&:focus {
+  outline: none;
+}
 
-  }
+}
 }
 
 //animations
 @keyframes pop-in {
-  0% {
-    transform:scale(0);
-  }
-  50% {
-    transform:scale(1.05)
-  }
-  75% {
-    transform:scale(0.95)
-  }
-  100% {
-    transform:scale(1)
-  }
+0% {
+transform:scale(0);
+}
+50% {
+transform:scale(1.05)
+}
+75% {
+transform:scale(0.95)
+}
+100% {
+transform:scale(1)
+}
 }
