--- a/src/components/FeedModal/styles.scss
+++ b/src/components/FeedModal/styles.scss
@@ -1,28 +1,47 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+
+$break-small: 520px;
+$break-large: 1200px;
+
 .modal {
+  border: 1px solid #ccc;
+  box-shadow: 0 0 100px black;
   z-index: 3;
   position: fixed;
-  max-height: 600px;
-  width: 600px;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  border-radius: 10px;
   background: white;
-
-  //transition: 2s ease;
-  //box-shadow: -2rem 2rem 2rem rgba(black, 0.2);
-  //
-  filter: blur(0);
-  -webkit-filter: blur(0);
-
-  opacity: 1;
   visibility: visible;
+
+  @media screen and (max-width: $break-small) {
+    max-height: 450px;
+    width: 90%;
+    border-radius: 5px;
+  }
+
+  @media screen and (min-width: $break-large) {
+    max-height: 600px;
+    width: 600px;
+    border-radius: 10px;
+  }
 
   &--button {
     border-radius: 1.5rem;
     border: 1.5px solid rgb(227, 227, 227);
     padding: 5px 20px;
     margin: 10px 20px;
+
+    @media screen and (max-width: $break-small) {
+      font-size: 10px;
+      padding: 5px 10px;
+      margin: 10px 10px;
+    }
+
+    @media screen and (min-width: $break-large) {
+      padding: 5px 20px;
+      margin: 10px 20px;
+    }
 
     &--left {
       float: left;
@@ -31,6 +50,7 @@
       float: right;
     }
     &:hover {
+      border: 1.5px solid #0F2027;
     }
 
     &:active {
@@ -53,32 +73,53 @@
   }
 
   &--title {
-    max-height: 150px;
-    font-size: 20px;
     border-bottom: 1px solid #ccc;
-    padding: 10px 20px;
     margin: 0;
-
     display: flex;
     align-items: center;
     justify-content: left;
+
+    @media screen and (max-width: $break-small) {
+      max-height: 70px;
+      font-size:13px;
+      padding: 10px 10px;
+    }
+
+    @media screen and (min-width: $break-large) {
+      max-height: 150px;
+      font-size: 20px;
+      padding: 10px 20px;
+    }
   }
 
   &--content {
-    max-height: 450px;
-    overflow: auto;
-
-    font-size: 15px;
+    overflow-y: auto;
+    overflow-x: hidden;
     border-bottom: 1px solid #ccc;
-    padding: 10px 20px;
     margin: 0;
-    img {
-      max-width: 450px;
+
+    @media screen and (max-width: $break-small) {
+      max-height: 320px;
+      padding: 5px 10px;
+      font-size: 11px;
+
+      img {
+        max-width: 150px;
+      }
+    }
+
+    @media screen and (min-width: $break-large) {
+      max-height: 450px;
+      padding: 10px 20px;
+      font-size: 15px;
+
+      img {
+        max-width: 450px;
+      }
     }
   }
 
   &--actions {
-    border-top: 1px solid #ccc;
     background: #eee;
     padding: 0.5rem 1rem;
     position: absolute;
