--- a/src/components/FeedPreview/styles.scss
+++ b/src/components/FeedPreview/styles.scss
@@ -11,16 +11,15 @@ $color-black: #000000;
 $color-error: #eb0200;
 $color-green-dark: #0F2027;
 
+$break-small: 520px;
+$break-large: 1200px;
+
 *, *:before, *:after {
   box-sizing: border-box;
 }
 
 .feeds-box {
   position: relative;
-  margin: 40px 180px;
-  border-radius: 20px;
-  width: auto;
-  height: 400px;
   background-color: rgba($color-white, .6);
   box-shadow: 0px 0px 25px 1px rgba(50, 50, 50, 0.3);
   animation: pop-in .5s ease forwards;
@@ -30,28 +29,59 @@ $color-green-dark: #0F2027;
   font-style: normal;
   font-size: 14px;
 
+  @media screen and (max-width: $break-small) {
+    border-radius: 5px;
+    margin: 40px 20px;
+    width: auto;
+    height: 500px;
+  }
+
+  @media screen and (min-width: $break-large) {
+    border-radius: 20px;
+    margin: 40px 180px;
+    width: auto;
+    height: 400px;
+  }
+
   &__header {
     position: absolute;
     margin: 0 auto;
     left: 0;
     right: 0;
     z-index: 2;
-    border-radius: 20px 20px 0 0;
-    height: 40px;
     background-color: rgba($color-white, .8);
+    height: 40px;
+
+    @media screen and (max-width: $break-small) {
+      border-radius: 5px 5px 0 0;
+    }
+
+    @media screen and (min-width: $break-large) {
+      border-radius: 20px 20px 0 0;
+    }
   }
 }
 
 .feeds {
-  border-radius: 10px;
   height: inherit;
   width: inherit;
   overflow-y: auto;
+  overflow-x: hidden;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
   align-content: stretch;
-  padding: 40px;
+
+
+  @media screen and (max-width: $break-small) {
+    border-radius: 5px;
+    padding: 48px 5px 10px 5px;
+  }
+
+  @media screen and (min-width: $break-large) {
+    border-radius: 10px;
+    padding: 40px;
+  }
 
   &::-webkit-scrollbar {
     display: none;
@@ -60,28 +90,30 @@ $color-green-dark: #0F2027;
 
 .item {
   position: relative;
-  margin: 10px;
-  width: 420px;
-  height: 140px;
   cursor: pointer;
 
   background-color: rgba($color-white, .6);
   border-radius: 10px;
   padding: 5px;
-  display: inline-block;
+  display: inline-flex;
+
+  @media screen and (max-width: $break-small) {
+    margin-bottom: 10px;
+    height: 110px;
+  }
+
+  @media screen and (min-width: $break-large) {
+    margin: 10px;
+    width: 420px;
+    height: 140px;
+  }
 
   &__title {
-    float: left;
-    padding: 0 20px;
-    display: inline-block;
-    width: 280px;
+    padding: 0 10px;
   }
 
   &__img {
-    float: left;
-    display: inline-block;
-    vertical-align: middle;
-    padding: 5px;
+    padding: 3px;
   }
 
   &:hover {
@@ -92,25 +124,47 @@ $color-green-dark: #0F2027;
 }
 
 .img {
-  height: 120px;
-  width: 120px;
-  border-radius: 15px;
   object-fit: cover;
+
+  @media screen and (max-width: $break-small) {
+    height: 100%;
+    width: 70px;
+    border-radius: 5px;
+  }
+
+  @media screen and (min-width: $break-large) {
+    height: 100%;
+    width: 120px;
+    border-radius: 15px;
+  }
 }
 
 .header-primary {
   text-transform: uppercase;
   display: inline-block;
-  padding-left: 50px;
   text-align: center;
-
   margin:auto;
-  line-height:40px;
-  vertical-align:middle;
 
-  font-weight: 600;
-  font-style: normal;
-  font-size: 15px;
+
+  @media screen and (max-width: $break-small) {
+    padding-left: 10px;
+    line-height:40px;
+    vertical-align:middle;
+
+    font-weight: 600;
+    font-style: normal;
+    font-size: 11px;
+  }
+
+  @media screen and (min-width: $break-large) {
+    padding-left: 50px;
+    line-height:40px;
+    vertical-align:middle;
+
+    font-weight: 600;
+    font-style: normal;
+    font-size: 15px;
+  }
 
   &--title {
     text-decoration: none;
@@ -119,9 +173,17 @@ $color-green-dark: #0F2027;
 }
 
 .header-secondary  {
-  font-size: 16px;
-  font-weight: 600;
   text-align: left;
+
+  @media screen and (max-width: $break-small) {
+    font-size: 13px;
+    font-weight: 600;
+  }
+
+  @media screen and (min-width: $break-large) {
+    font-size: 16px;
+    font-weight: 600;
+  }
 
   &--title {
     overflow: hidden;
@@ -130,50 +192,90 @@ $color-green-dark: #0F2027;
     -webkit-box-orient: vertical;
   }
   &--date {
-    font-size: 12px;
     font-weight: 500;
     position: absolute;
-    bottom: 0px;
-}
+    bottom: 0;
+
+    @media screen and (max-width: $break-small) {
+      font-size: 10px;
+    }
+
+    @media screen and (min-width: $break-large) {
+      font-size: 12px;
+    }
+  }
 }
 
 .look-for-box {
-position: absolute;
-display: inline-block;
-right: 50px;
-bottom: 50%;
-transform: translateY(50%);
+  position: absolute;
+  display: inline-block;
+  bottom: 50%;
+  transform: translateY(50%);
 
-&__icon {
-position: absolute;
-display: inline-block;
-fill: $color-grey-dark;
-height: 18px;
-width: 18px;
-top: 50%;
-right: auto;
-left: .7em;
-transform: translateY(-50%);
-}
+  @media screen and (max-width: $break-small) {
+    right: 10px;
+  }
 
-&__input {
-width: 250px;
-color: inherit;
-padding: 5px 38px;
-background-color: $color-white;
-transition: all .3s;
-border-radius: 1.5rem;
-border: 1.5px solid rgb(227, 227, 227);
+  @media screen and (min-width: $break-large) {
+    right: 50px;
+  }
 
-&:focus {
-  outline: none;
-  border: 1.5px solid $color-green-dark;
-}
+  &__icon {
+    position: absolute;
+    display: inline-block;
+    fill: $color-grey-dark;
+    top: 50%;
+    right: auto;
+    left: .7em;
+    transform: translateY(-50%);
 
-&::-webkit-input-placeholder {
-  color: $color-grey-dark;
-}
-}
+    @media screen and (max-width: $break-small) {
+      display: none;
+    }
+
+    @media screen and (min-width: $break-large) {
+      height: 18px;
+      width: 18px;
+    }
+  }
+
+  &__input {
+    color: inherit;
+    background-color: $color-white;
+    transition: all .3s;
+
+    @media screen and (max-width: $break-small) {
+      width: 80px;
+      padding: 2px 4px;
+      border-radius: 6px;
+      font-size: 11px;
+      border: 1px solid rgb(227, 227, 227);
+    }
+
+    @media screen and (min-width: $break-large) {
+      width: 250px;
+      padding: 5px 38px;
+      border-radius: 1.5rem;
+      border: 1.5px solid rgb(227, 227, 227);
+    }
+
+    &:focus {
+      outline: none;
+
+      @media screen and (max-width: $break-small) {
+        border: 1px solid $color-green-dark;
+      }
+
+      @media screen and (min-width: $break-large) {
+        border: 1.5px solid $color-green-dark;
+      }
+
+    }
+
+    &::-webkit-input-placeholder {
+      color: $color-grey-dark;
+    }
+  }
 }
 
 .error-message {
@@ -205,6 +307,7 @@ border: 1.5px solid rgb(227, 227, 227);
     padding: 5px 20px;
 
     &:hover {
+      border: 1.5px solid $color-green-dark;
     }
 
     &:active {
@@ -221,16 +324,16 @@ border: 1.5px solid rgb(227, 227, 227);
 
 //animations
 @keyframes pop-in {
-0% {
-transform:scale(0);
-}
-50% {
-transform:scale(1.05)
-}
-75% {
-transform:scale(0.95)
-}
-100% {
-transform:scale(1)
-}
+  0% {
+    transform:scale(0);
+  }
+  50% {
+    transform:scale(1.05)
+  }
+  75% {
+    transform:scale(0.95)
+  }
+  100% {
+    transform:scale(1)
+  }
 }
