--- a/src/components/FeedPreview/styles.scss
+++ b/src/components/FeedPreview/styles.scss
@@ -99,6 +99,7 @@ $break-large: 1200px;
 
   @media screen and (max-width: $break-small) {
     margin-bottom: 10px;
+    width: -webkit-fill-available;
     height: 110px;
   }
 
